--- a/faq.html
+++ b/faq.html
@@ -86,7 +86,7 @@
             <div class="row">
               <div class="col ">
                 <ul class="list-group pregRespuesta ">
-                    <li class="list-group-item ">¿Tiempo de garantía?</li>
+                    <li class="list-group-item ">¿Tiene garantía?</li>
                   
                     <li class="list-group-item list-group-item-primary">¿Tiempo que demora el presupuesto?</li>
                     <li class="list-group-item list-group-item-secondary">¿Cómo nos comunicamos con nuestros clientes?</li>
@@ -107,10 +107,10 @@
               </div>
               <div class="container">
                 <div class="row">
-                  <div class="col">
+                  <div class="col faq1">
                     <img class="faq" src="./faq/faq.jpg" alt="">
                   </div>
-                  <div class="col">
+                  <div class="col faq1">
                     <img class="faq" src="./faq/faq.jpg" alt="">
                   </div>
                   
